day-url
每日任务url生成
