# backend/modules/v1/swagger/models/dayUrl.php
@@ -1,0 +1,17 @@
+
+<?php
+
+/**
+ * @SWG\Definition(required={"score", "name"}, type="object", @SWG\Xml(name="dayUrl"))
+ */
+class dayUrl
+{
+
+     /**
+     * @SWG\Property(description="url")
+     * @var string
+     */
+    private $url;
+
+
+}
