# backend/web/swagger-docs/swagger.json
@@ -10,10 +10,10 @@
         },
         "version": "1.0.0"
     },
-    "host": "localhost",
+    "host": "elearninggame.icoke.cn",
     "basePath": "/coca/backend/web",
     "schemes": [
-        "http"
+        "https"
     ],
     "paths": {
         "/login": {
@@ -852,6 +852,252 @@
                     },
                     "404": {
                         "description": "\u5c0f\u5173\u5361\u4e0d\u5b58\u5728"
+                    },
+                    "401": {
+                        "description": "\u8eab\u4efd\u8ba4\u8bc1\u5931\u8d25"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/v1/day-urls": {
+            "get": {
+                "tags": [
+                    "\u6bcf\u65e5\u4efb\u52a1url\u7ba1\u7406"
+                ],
+                "summary": "\u8fd4\u56de\u6bcf\u65e5\u4efb\u52a1url\u5217\u8868",
+                "description": "\u8fd4\u56de\u6bcf\u65e5\u4efb\u52a1url\u5217\u8868",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "path",
+                        "description": "\u7b2c\u51e0\u9875",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "per-page",
+                        "in": "query",
+                        "description": "\u6bcf\u9875\u7684\u6570\u91cf",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u83b7\u53d6\u6210\u529f",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dayUrlList"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "\u8eab\u4efd\u8ba4\u8bc1\u5931\u8d25"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "\u6bcf\u65e5\u4efb\u52a1url\u7ba1\u7406"
+                ],
+                "summary": "\u6dfb\u52a0\u6bcf\u65e5\u4efb\u52a1url",
+                "description": "\u6dfb\u52a0\u6bcf\u65e5\u4efb\u52a1url",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "\u6bcf\u65e5\u4efb\u52a1url\u548c\u9009\u9879json\u4e32",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dayUrl"
+                        }
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "\u6dfb\u52a0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/dayUrl"
+                        }
+                    },
+                    "422": {
+                        "description": "\u6570\u636e\u9a8c\u8bc1\u5931\u8d25"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            }
+        },
+        "/v1/day-urls/{id}": {
+            "get": {
+                "tags": [
+                    "\u6bcf\u65e5\u4efb\u52a1url\u7ba1\u7406"
+                ],
+                "summary": "\u67e5\u770b\u6bcf\u65e5\u4efb\u52a1url",
+                "description": "\u67e5\u770b\u6bcf\u65e5\u4efb\u52a1url",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "\u6bcf\u65e5\u4efb\u52a1urlid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u66f4\u65b0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/dayUrl"
+                        }
+                    },
+                    "404": {
+                        "description": "\u6bcf\u65e5\u4efb\u52a1url\u4e0d\u5b58\u5728"
+                    },
+                    "401": {
+                        "description": "\u8eab\u4efd\u9a8c\u8bc1\u5931\u8d25"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "\u6bcf\u65e5\u4efb\u52a1url\u7ba1\u7406"
+                ],
+                "summary": "\u66f4\u65b0\u6bcf\u65e5\u4efb\u52a1url",
+                "description": "\u66f4\u65b0\u6bcf\u65e5\u4efb\u52a1url",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "\u6bcf\u65e5\u4efb\u52a1url id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "\u5f85\u66f4\u65b0\u6bcf\u65e5\u4efb\u52a1url\u548c\u9009\u9879json\u4e32",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dayUrl"
+                        }
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u66f4\u65b0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/dayUrl"
+                        }
+                    },
+                    "422": {
+                        "description": "\u6570\u636e\u9a8c\u8bc1\u5931\u8d25"
+                    },
+                    "404": {
+                        "description": "\u6bcf\u65e5\u4efb\u52a1url\u4e0d\u5b58\u5728"
+                    }
+                },
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "\u6bcf\u65e5\u4efb\u52a1url\u7ba1\u7406"
+                ],
+                "summary": "\u5220\u9664\u6bcf\u65e5\u4efb\u52a1url",
+                "description": "\u5220\u9664\u6bcf\u65e5\u4efb\u52a1url",
+                "operationId": "getInventory",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "\u6bcf\u65e5\u4efb\u52a1url id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "access-token",
+                        "in": "query",
+                        "description": "\u8eab\u4efd\u4ee4\u724c",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "\u5220\u9664\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6bcf\u65e5\u4efb\u52a1url\u4e0d\u5b58\u5728"
                     },
                     "401": {
                         "description": "\u8eab\u4efd\u8ba4\u8bc1\u5931\u8d25"
@@ -2365,6 +2611,41 @@
             "type": "object",
             "xml": {
                 "name": "chaptersList"
+            }
+        },
+        "dayUrl": {
+            "required": [
+                "score",
+                "name"
+            ],
+            "properties": {
+                "url": {
+                    "description": "url",
+                    "type": "string"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "dayUrl"
+            }
+        },
+        "dayUrlList": {
+            "properties": {
+                "items": {
+                    "description": "\u6ca1\u4eba\u4efb\u52a1url\u5217\u8868",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dayUrl"
+                    }
+                },
+                "_meta": {
+                    "description": "\u76f8\u5173\u4fe1\u606f",
+                    "$ref": "#/definitions/ListInfo"
+                }
+            },
+            "type": "object",
+            "xml": {
+                "name": "dayUrlList"
             }
         },
         "maps": {
